--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "apollo-server": "^3.10.0",
         "apollo-server-express": "^3.10.0",
         "bcrypt": "^5.0.0",
         "express": "^4.17.1",
